--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,32 @@
 .profile__image {
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
+  object-fit: cover;
+  object-position: center;
+}
+
+.profile__image-overlay {
+  position: absolute;
+  inline-size: 120px;
+  block-size: 120px;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../images/edit-icon.svg);
   background-position: center;
-  margin: 0 29px 0 0;
+  background-repeat: no-repeat;
+  background-size: 26px;
+
+  font-family: inherit;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.4s, opacity 0.4s;
+}
+
+.profile__image-container:hover .profile__image-overlay {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
